--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <h2>Envianos un Mensaje</h2>
         <div class="contacto-container">
             <div class="contacto-form">
-                <form>
+                <form id="form-contacto">
                     <div class="form-group">
                         <label for="nombre">Nombre</label>
                         <input type="text" id="nombre" name="nombre" required>
@@ -137,4 +137,5 @@
         <p>&copy; 2025 Pixel Play - Todos los derechos reservados</p>
     </footer>
 </body>
+
 </html>
